# echoverse_sonar_lab

./: CMakeLists.txt  LICENSE  NOTICE  README.md  vcpkg.json
docs/: Offline Waveform and Image Reconstruction Pipeline.md  acoustic_simulation_core_overview.md  model_loading_and_custom_assets.md  software_architecture_analysis.md  sonar_esl3d_data_spec.md  sonar_h5_data_spec.md  sonar_pointcloud_tcp_protocol.md  visualization_and_interactive_control.md
src/: AppConfig.cpp  AppConfig.hpp  CameraModule.cpp  CameraModule.hpp  FlsModule.cpp  FlsModule.hpp  InfoPanelWidget.cpp  InfoPanelWidget.hpp  MbesModule.cpp  MbesModule.hpp  MultibeamEngine.hpp  PathEditorPanel.cpp  PathEditorPanel.hpp  PathFollower.cpp  PathFollower.hpp  PointCloudPolarFrame.hpp  PointCloudSonarSimulation.cpp  PointCloudSonarSimulation.hpp  PointCloudTcpStreamer.cpp  PointCloudTcpStreamer.hpp  PointCloudViewerWindow.cpp  PointCloudViewerWindow.hpp  RockSonarPlotView.cpp  RockSonarPlotView.hpp  SceneEditorPanel.cpp  SceneEditorPanel.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SharedScene.cpp  SharedScene.hpp  SssModule.cpp  SssModule.hpp  WorldFileIo.cpp  WorldFileIo.hpp  echoverse_sonar_lab.cpp  esl_launcher.cpp  rock_windows_compat.hpp
src/boost/: cstdint.hpp  random.hpp
src/frame_helper/: CMakeLists.txt  Calibration.cpp  Calibration.h  FrameHelper.cpp  FrameHelper.h  FrameQImageConverter.h
src/matlab_point2file2image/: ReadBaselineHDF5.m  file2image.m  pointcloud2file.m
src/matlab_point2file2image/Beamformer/: compensate_range_shift.m  das_plane_wave_fd.m  das_plane_wave_id.m
src/matlab_point2file2image/ESL3D/: PointCloudDecimate.m  PointCloudShuffle.m  esl3d.m
src/matlab_point2file2image/Initialize/: DataMakerInit.m  EchoInit.m  EnvInit.m  ImagePlot.m  SceneInit.m  SonarInit.m
src/matlab_point2file2image/RXSignalGen/: sim_rx_from_scatterers_perTX_cuda.m  sim_rx_from_scatterers_perTX_cuda_mex.mexw64
src/matlab_point2file2image/SignalFilter/: SignalFilter.m
src/matlab_point2file2image/SonarDataMaker/: SonarDataMaker.m
src/matlab_point2file2image/SonarParameter/: CDM.json  FDM.json  Sonar.json
src/matlab_point2file2image/TVG/: tvg_factory.m
src/matlab_point2file2image/TXSignalGen/: gen_multicode_cazac_excitation.m  gen_multisubband_lfm_excitation.m
src/matlab_point2file2image/Visualize/: BaselineProcessID.m  sector_plot.m  visualize_esl3d.m
src/opencv2/: cvconfig.h  opencv_modules.hpp
src/resources/: echoverse_sonar_lab.rc
src/sonar_core/: AcousticRaySimulator.cpp  AcousticRaySimulator.hpp  BeamImageSynthesizer.cpp  BeamImageSynthesizer.hpp  SignalProcessingUtils.cpp  SignalProcessingUtils.hpp
src/sonar_imaging/: GeometryTextureTools.cpp  GeometryTextureTools.hpp  OffscreenCaptureRig.cpp  OffscreenCaptureRig.hpp  SceneDepthComposer.cpp  SceneDepthComposer.hpp  TopDownDepthMapGenerator.cpp  TopDownDepthMapGenerator.hpp
src/sonar_palette/: PaletteRamp.cpp  PaletteRamp.hpp  PaletteTypes.hpp
src/sonar_types_v2/: echoverse_frame_types.hpp  echoverse_math_types.hpp  echoverse_pose_types.hpp  echoverse_sonar_types.cpp  echoverse_sonar_types.hpp  echoverse_sonar_types_all.hpp  echoverse_time_types.cpp  echoverse_time_types.hpp
src/sonar_ui/: SideScanControlPanel.cpp  SideScanControlPanel.hpp  SideScanWaterfallCanvas.cpp  SideScanWaterfallCanvas.hpp  SonarCanvas.cpp  SonarCanvas.hpp  SonarControlPanel.cpp  SonarControlPanel.hpp
src/ui/: DockWorkspace.cpp  DockWorkspace.hpp  DraggableTabBar.cpp  DraggableTabBar.hpp  TabDropOverlay.cpp  TabDropOverlay.hpp
uwmodels/scenes/ssiv_bahia/: ssiv_bahia.world
uwmodels/sdf/rock/: model.sdf
